[gd_scene load_steps=7 format=3 uid="uid://ds38pf548u56r"]

[ext_resource type="Script" path="res://game/environment/door.gd" id="1_f3278"]
[ext_resource type="PackedScene" uid="uid://d3r02vp78wx5y" path="res://game/environment/door_side.tscn" id="1_nm82f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xj7wg"]
size = Vector2(32, 32)

[sub_resource type="Animation" id="Animation_avide"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DoorLeft:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-8, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DoorRight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8, 0)]
}

[sub_resource type="Animation" id="Animation_ag7o3"]
resource_name = "open"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DoorLeft:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(2, 2),
"update": 0,
"values": [Vector2(-8, 0), Vector2(-24, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DoorRight:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(2, 2),
"update": 0,
"values": [Vector2(8, 0), Vector2(24, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b3v0m"]
_data = {
"RESET": SubResource("Animation_avide"),
"open": SubResource("Animation_ag7o3")
}

[node name="Door" type="Node2D"]
script = ExtResource("1_f3278")

[node name="DoorLeft" parent="." instance=ExtResource("1_nm82f")]
position = Vector2(-8, 0)

[node name="DoorRight" parent="." instance=ExtResource("1_nm82f")]
position = Vector2(8, 0)

[node name="DetectArea" type="Area2D" parent="."]
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource("RectangleShape2D_xj7wg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b3v0m")
}

[connection signal="body_entered" from="DetectArea" to="." method="_on_detect_area_body_entered"]
[connection signal="body_exited" from="DetectArea" to="." method="_on_detect_area_body_exited"]
